feat(web-app): initialize web application structure with layout and page components
- Added RootLayout component for global layout structure.
- Created Index page with welcome message and learning materials.
- Configured Tailwind CSS for styling.
- Set up TypeScript configuration for the web app.
- Added Jest configuration for testing.
- Integrated ESLint for code quality checks.
- Configured commit linting rules for consistent commit messages.
- Added Renovate configuration for dependency management.

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,31 @@
 {
-  "singleQuote": true
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "overrides": [
+    {
+      "files": "*.json",
+      "options": {
+        "printWidth": 80
+      }
+    },
+    {
+      "files": "*.md",
+      "options": {
+        "proseWrap": "always"
+      }
+    },
+    {
+      "files": ["*.yml", "*.yaml"],
+      "options": {
+        "singleQuote": false
+      }
+    }
+  ]
 }
