feat: add config, shared-constants, shared-dto, and shared-untils packages with initial setup
- Added package.json and README.md for each new package.
- Implemented basic functionality in shared-constants, shared-dto, and shared-untils.
- Configured Jest and ESLint for each package.
- Created TypeScript configuration files for library and spec.
- Added SWC configuration for faster builds and tests.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,18 @@
     },
     {
       "path": "./apps/backend/web-app-api"
+    },
+    {
+      "path": "./packages/config"
+    },
+    {
+      "path": "./packages/shared-dto"
+    },
+    {
+      "path": "./packages/shared-constants"
+    },
+    {
+      "path": "./packages/shared-untils"
     }
   ]
 }
