--- a/package.json
+++ b/package.json
@@ -2,7 +2,22 @@
   "name": "@iam-monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "nx run-many --target=serve --projects=web-app,web-app-api --parallel",
+    "dev:web": "pnpm nx serve web-app",
+    "dev:api": "pnpm nx serve web-app-api",
+    "lint": "pnpm nx run-many -t lint --all",
+    "lint:fix": "pnpm nx run-many -t lint --all --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "test": "pnpm nx run-many -t test --all",
+    "test:watch": "pnpm nx run web:test --watch",
+    "build": "pnpm nx run-many -t build --all",
+    "clean": "rimraf dist .turbo .nx-cache",
+    "ci:check": "pnpm lint && pnpm format:check && pnpm test && pnpm build",
+    "prepare": "husky install",
+    "commitlint": "commitlint --edit $1"
+  },
   "private": true,
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
@@ -57,9 +72,25 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "compression": "1.8.1",
+    "cors": "2.8.5",
+    "drizzle-kit": "0.31.4",
+    "drizzle-orm": "0.44.5",
     "express": "^4.21.2",
+    "ioredis": "5.7.0",
+    "lodash": "4.17.21",
+    "moment": "2.30.1",
     "next": "~15.2.4",
+    "next-auth": "4.24.11",
+    "pg": "8.16.3",
+    "pino": "9.9.0",
+    "pino-http": "10.5.0",
+    "pino-pretty": "13.1.1",
+    "postgres": "3.4.7",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "ui": "git+https://github.com/shadcn/ui.git",
+    "zod": "4.1.3",
+    "zustand": "5.0.8"
   }
 }
