--- a/apps/frontend/web-app/tsconfig.json
+++ b/apps/frontend/web-app/tsconfig.json
@@ -27,13 +27,14 @@
     "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo"
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.js",
-    "src/**/*.jsx",
     "../../../apps/frontend/web-app/.next/types/**/*.ts",
     "../../../dist/apps/frontend/web-app/.next/types/**/*.ts",
-    "next-env.d.ts"
+    "next-env.d.ts",
+    "src/**/*.js",
+    "src/**/*.jsx",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "out-tsc",
