feat: add database configuration and schema for asset management, user roles, and policies

--- a/apps/backend/web-app-api/tsconfig.json
+++ b/apps/backend/web-app-api/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../../packages/config"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
